--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ html {
 
 @layer base {
     body {
-        @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide;
+        @apply text-[#1f2937] tracking-wide;
     }
 
     h1,
@@ -33,9 +33,5 @@ html {
 
     li {
         @apply cursor-pointer;
-    }
-
-    button {
-        @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white;
     }
 }
